--- a/src/assets/scss/position.scss
+++ b/src/assets/scss/position.scss
@@ -1,3 +1,6 @@
+body {
+    max-width: 1920px;
+}
 .right {
     float: right;
     margin-left: -2rem;
@@ -9,4 +12,16 @@
 ._inlineFlex {
     display: inline-flex;
     justify-content: space-between;
+}
+._width-25 {
+    width: 25%;
+}
+._width-40 {
+    width: 40%;
+}
+._width-100 {
+    width: 100%;
+}
+.input_150 {
+    width: 150px;
 }
