--- a/src/pug/blocks/__elements/dropdown/dropdown.pug
+++ b/src/pug/blocks/__elements/dropdown/dropdown.pug
@@ -1,5 +1,40 @@
 //- шаблон для создания dropdown - +dropdown([one,two,three])
-mixin dropdown(attr)
-  select(size="1" required)
-    each i in attr
-      option(value=attr[i])= i
+//- mixin dropdown-320(attr)
+//-   select(size="1" required)._width-100
+//-     each i in attr
+//-       option(value=attr[i])= i
+//-   label 
+//-     svg.arrow-320
+//-         use(xlink:href="#arrow")
+//- mixin dropdown-150(attr)
+//-   select(size="1" required).input_150
+//-     each i in attr
+//-       option(value=attr[i])= i
+//-   label
+//-     svg.arrow-150
+//-         use(xlink:href="#arrow")
+mixin dropdown-320(attr,type,placeholder)
+  .dropdown
+    label.right
+      svg.arrow-320
+        use(xlink:href="#arrow")
+    input(type=type,placeholder=placeholder)._width-100
+    .dropdown-content._flex._bRadius._border
+      .item._inlineFlex
+        h3._width-50= attr[0]
+        .right._inlineFlex._width-40
+          .count._flex -
+          h3.num_item1 2
+          .count._flex +
+      .item._inlineFlex
+        h3._width-50= attr[1]
+        .right._inlineFlex._width-40
+          .count._flex -
+          h3.num_item1 2
+          .count._flex +
+      .item._inlineFlex
+        h3._width-50= attr[2]
+        .right._inlineFlex._width-40
+          .count._flex -
+          h3.num_item1 0
+          .count._flex +
