--- a/src/pug/blocks/__elements/dropdown/dropdown.scss
+++ b/src/pug/blocks/__elements/dropdown/dropdown.scss
@@ -1,18 +1,47 @@
-input, select {
+input {
     box-sizing: border-box;
     padding-left: 15px;
     border-radius: 4px;
     height: 44px;
     color: var(--dark-25);
 }
-select {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: right 15px center;
+.dropdown {
+    position: relative;
+}
+.dropdown-content {
     background-color: #fff;
-
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
+    box-sizing: border-box;
+    padding: 15px;
+    height: 140px;
+    display: none;
+    position: absolute;
+    left:0;
+    right:0;
+    z-index: 1;
+}
+.dropdown-content .count {
+    font-size: 18px;
+    color: var(--dark-50);
+    width:30px;
+    height: 30px;
+    align-self: center;
+    text-align: center;
+    border: 1px solid var(--dark-50);
+    border-radius: 60%;
+    cursor: pointer;
+    justify-content: center;
+}
+.dropdown:hover .dropdown-content {
+    display: flex;
+}
+.arrow-320 {
+    fill: var(--dark-50);
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    margin-top: .5rem;
+    margin-left: -2rem;
+}
+.arrow-320:hover {
+    fill: var(--dark-75);
 }
