--- a/src/pug/blocks/cards/cards.scss
+++ b/src/pug/blocks/cards/cards.scss
@@ -1,9 +1,12 @@
 body {
-    padding:30px;
-    margin: 0;
+    margin: auto;
+}
+.logo {
+    width: 48px;
+    height: 48px;
 }
 .find {
-    max-width: 320px;
+    max-width: 25%;
     max-height: 304px;
     padding: 30px 30px 40px 30px;
 }
@@ -16,12 +19,7 @@ body {
 ._bShadow {
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
 }
-.input_320 {
-    width: 320px;
-}
-.input_150 {
-    width: 150px;
-}
+
 input[type="number"] {
     cursor: pointer;
 }
@@ -31,9 +29,6 @@ input[type="number"] {
 .btn_big {
     border: 0;
     background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-}
-.btn_small {
-
 }
 // with normalize
 a {
