--- a/src/pug/blocks/main.pug
+++ b/src/pug/blocks/main.pug
@@ -1,15 +1,16 @@
+block variable
 html(lang="ru")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title #{title}
-        style(type='text/css')
-            include ../../assets/scss/vars.scss
-            include ../../assets/scss/fonts.scss
-            include ../../assets/scss/position.scss
-            include ../../assets/scss/action.scss
-            include ../../assets/scss/text.scss
-            include __elements/dropdown/dropdown.scss        
-            include cards/cards.scss        
-    body
+  head
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    link(href="../../assets/css/main.css", rel="stylesheet")
+    block head
+  body
+    include ./../../assets/img/svg.svg
+    .logo
+      svg.logo__img
+        use(xlink:href="#logo")
+    block body
+
+    block footer
