--- a/src/pug/blocks/__elements/text-field/text-field.pug
+++ b/src/pug/blocks/__elements/text-field/text-field.pug
@@ -1,6 +1,10 @@
-mixin text-field-320(h3text,type,placeholder,span)
-  h3._width-100=h3text
-      span.right=span
-  input(type=type placeholder=placeholder)._width-100
-mixin text-field-150(type,placeholder)
-  input(type=type placeholder=placeholder).input_150
+mixin text-field(h3text,type,placeholder,span,bool)
+  .text-field(class!=attributes.class)
+    if(bool)
+      label
+        svg.arrow
+          use(xlink:href="#"+bool)
+    h3= h3text
+    span= span
+    input(type=type placeholder=placeholder)
+
