--- a/src/pug/blocks/__elements/radio-buttons/radio-buttons.pug
+++ b/src/pug/blocks/__elements/radio-buttons/radio-buttons.pug
@@ -1,11 +1,9 @@
 mixin radio-button(h3text)
   .radio-button
     h3= h3text
-    form
-      label.radio-button__item
-        input(type="radio" class=".radio-button__input")
-        span.radio-button__text Мужчина
-      label.radio-button__item
-        input(type="radio" class=".radio-button__input")
-        span.radio-button__text Женщина
-
+    label.radio-button__item
+      input(type="radio" class="radio-button__input" name="sex")
+      span.radio-button__text Мужчина
+    label.radio-button__item
+      input(type="radio" class="radio-button__input" name="sex")
+      span.radio-button__text Женщина
