--- a/src/pug/blocks/__elements/radio-buttons/radio-buttons.scss
+++ b/src/pug/blocks/__elements/radio-buttons/radio-buttons.scss
@@ -1,51 +1,51 @@
 .radio-button {
     display: flex;
     flex-wrap: wrap;
-    flex-basis: 230px;
+    flex-basis: 260px;
+
     h3 {
         width: 100%;
     }
     .radio-button__item {
         display: flex;
-        justify-content: flex-start;
-        flex-basis: 50%;
         align-items: center;
+        flex-basis: 30%;
+        cursor: pointer;
+        position: relative;
+        padding-left: 25px;
+        margin-right: 15px;
+        font-size: 13px;
     }
     .radio-button__input {
         display: none;
-        flex-basis: 40px;
-        height: 40px;
-        z-index: -1;
-        opacity: 0;
     }
-    .radio-button__text {
-        position: relative;
-        cursor: pointer;
-    }
-    .radio-button__input:before {
+    .radio-button__text:before {
         content: '';
+        display: inline-block;
+        width: 1.3rem;
+        height: 1.3rem;
         position: absolute;
-        border: 1px solid var(--pink);
+        left: calc(0-10px);
+        top: -.3rem;
+        background-color: transparent;
+        border: 2px solid var(--dark-25);
         border-radius: 50%;
-        width: 20px; 
-        height: 20px;
     }
-    .radio-button__text:after {
-        content: '';
-        position: absolute;
-        top: 1px;
-        left: 4px;
-        width: 16px;
-        height: 16px;
-        border-radius: 50%;
-        background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-        opacity: 0;
-        transition: .2s;
+    .radio-button__input:checked + .radio-button__text:before {
+        border-color: var(--purple);
+    }
+    .radio-button__input:checked + .radio-button__text {
+        color: var(--dark-75);
     }
     .radio-button__input:checked + .radio-button__text:after {
-        opacity: 1;
+        content: '';
+        position: absolute;
+        left: calc(.28rem-10px);
+        top: -.05rem;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
     }
-    .radio-button__input:focus + .radio-button__text:before {
-        box-shadow: 0 0 3px var(--dark-25);
-    }
+
 }
