--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -2,6 +2,7 @@
 @import './checkbox/checkbox.scss';
 @import './text-field/text-field.scss';  
 @import './radio-buttons/radio-buttons.scss';  
+@import './toggle/toggle.scss';  
 
 body .block {
     display: flex;
