--- a/src/pug/blocks/__elements/radio-buttons/radio-buttons.scss
+++ b/src/pug/blocks/__elements/radio-buttons/radio-buttons.scss
@@ -12,8 +12,7 @@
         flex-basis: 30%;
         cursor: pointer;
         position: relative;
-        padding-left: 25px;
-        margin-right: 15px;
+        padding-left: 30px;
         font-size: 13px;
     }
     .radio-button__input {
@@ -25,10 +24,10 @@
         width: 1.3rem;
         height: 1.3rem;
         position: absolute;
-        left: calc(0-10px);
+        left: 0;
         top: -.3rem;
         background-color: transparent;
-        border: 2px solid var(--dark-25);
+        border: 1px solid var(--dark-25);
         border-radius: 50%;
     }
     .radio-button__input:checked + .radio-button__text:before {
@@ -40,10 +39,10 @@
     .radio-button__input:checked + .radio-button__text:after {
         content: '';
         position: absolute;
-        left: calc(.28rem-10px);
-        top: -.05rem;
-        width: 1rem;
-        height: 1rem;
+        left: .3rem;
+        top: 0;
+        width: .8rem;
+        height: .8rem;
         border-radius: 50%;
         background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
     }
