--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -3,6 +3,7 @@
 @import './text-field/text-field.scss';  
 @import './radio-buttons/radio-buttons.scss';  
 @import './toggle/toggle.scss';  
+@import './like-buttons/like-buttons.scss';  
 
 body .block {
     display: flex;
@@ -12,4 +13,16 @@ body .block {
     min-width: 280px;
     flex-wrap: wrap;
     margin: 0 5%;
+}
+body .block1 {
+    display: flex;
+    align-content: flex-start;
+    flex-basis: 25%;
+    min-width: 280px;
+    flex-wrap: wrap;
+    margin: 0 5%;
+
+    h3 {
+        width: 100%;
+    }
 }
