--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -4,6 +4,7 @@
 @import './radio-buttons/radio-buttons.scss';  
 @import './toggle/toggle.scss';  
 @import './like-buttons/like-buttons.scss';  
+@import './rate-button/rate-button.scss';  
 
 body .block {
     display: flex;
