--- a/src/pug/blocks/__elements/radio-buttons/radio-buttons.pug
+++ b/src/pug/blocks/__elements/radio-buttons/radio-buttons.pug
@@ -1,6 +1,5 @@
-mixin radio-button(h3text)
+mixin radio-button()
   .radio-button
-    h3= h3text
     label.radio-button__item
       input(type="radio" class="radio-button__input" name="sex")
       span.radio-button__text Мужчина
