changing webpack.config and creating select buttons in JS

--- a/src/pug/blocks/__elements/checkbox/checkbox.pug
+++ b/src/pug/blocks/__elements/checkbox/checkbox.pug
@@ -4,6 +4,6 @@ mixin checkbox(h3text)
     h3= h3text
     each item in list
       label
-        input(type="checkbox")
+        input(type="checkbox" class="checkbox__input")
         span.check
         span.list__item= item
