creating range-slider and connected jQuery

--- a/src/pug/blocks/__elements/Form_Elements.pug
+++ b/src/pug/blocks/__elements/Form_Elements.pug
@@ -35,7 +35,9 @@ block body
     +rate-button('stars-right')
 
   .block
-
+    h3 Range slider
+    .range
+      input(type="text" class="js-range-slider" name="my_range" value="")
 
 
 block footer
