creating pagination element

--- a/src/pug/blocks/__elements/Form_Elements.pug
+++ b/src/pug/blocks/__elements/Form_Elements.pug
@@ -53,5 +53,8 @@ block body
         +button('ПЕРЕЙТИ К ОПЛАТЕ')(class=['btn--fill','btn--big'])
     h3 pagination
       .pagination
+      span.pagination--text 1-12 из 100+ вариантов аренды
+        
+
 block footer
   script(src='../../Form_Elements.js')
