--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -30,3 +30,12 @@ body .block1 {
         width: 100%;
     }
 }
+.simple-pagination {
+    margin-top: 15px;
+}
+.pagination--text {
+    font-size: 14px;
+    color: var(--dark-75);
+    line-height: 24px;
+    font-family:  "Montserrat-bold";
+}
