--- a/src/pug/blocks/__elements/general.scss
+++ b/src/pug/blocks/__elements/general.scss
@@ -6,22 +6,28 @@ input {
     color: var(--dark-25);
     flex-basis: 100%;
 }
-.arrow {
-    fill: var(--dark-50);
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    margin-top: 3rem;
-    margin-left: -2rem;
-}
-.arrow:hover {
-    fill: var(--dark-75);
-}
-
 .dropdown label, .text-field label {
     display: flex;
     flex-basis: 100%;
     justify-content: flex-end;
     margin-right: 1rem;
     cursor: pointer;
+}
+.arrow--down:after {
+    content: '';
+    position: absolute;
+    width: 97%;
+    height: 44px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z' fill='rgba(31, 32, 65, 0.5)'/%3E%3Cpath fill='none' d='M0 0h24v24H0V0z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right center;
+}
+.arrow--forward:after {
+    content: '';
+    position: absolute;
+    width: 97%;
+    height: 44px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z' fill='%231F2041'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right center;
 }
