--- a/src/pug/blocks/__elements/checkbox/checkbox.scss
+++ b/src/pug/blocks/__elements/checkbox/checkbox.scss
@@ -10,6 +10,7 @@
         display: flex;
         margin-top: 10px;
         flex-wrap: wrap;
+        cursor: pointer;
 
         .list__item {
             width: 192px;
