--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -11,6 +11,8 @@
 @import './dropdown/dropdown.min.scss';   
 @import './checkbox-expandle/checkbox-expandle.scss';   
 @import './option/option.scss';   
+@import './checkbox_rich/checkbox_rich.scss';   
+@import './bullet-list/bullet-list.scss';   
 
 body .block {
     display: flex;
