--- a/src/pug/blocks/__elements/bullet-list/bullet-list.scss
+++ b/src/pug/blocks/__elements/bullet-list/bullet-list.scss
@@ -1,1 +1,25 @@
-h1 {color: green;}
+.bullet-list {
+    display: flex;
+    flex-wrap: wrap;
+
+    .bullet-list__items:before {
+        content: '';
+        margin-left: -20px;
+        margin-top: 6px;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: var(--dark-25);
+    
+    }
+    .bullet-list__items {
+        margin-left: 20px;
+        width: 220px;
+        font-size: 14px;
+        line-height: 24px;
+        color: var(--dark-75);
+        text-transform: none;
+        text-align: left;
+    }
+}
