change dropdown and creating his logic

--- a/src/assets/scss/other.scss
+++ b/src/assets/scss/other.scss
@@ -1,13 +1,6 @@
 body {
     margin: auto;
-}
-
-._bShadow {
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-}
-
-input[type="number"] {
-    cursor: pointer;
+    font-size: 14px;
 }
 .btn {
     border-radius: 22px;
