--- a/src/pug/blocks/__elements/Form_Elements.pug
+++ b/src/pug/blocks/__elements/Form_Elements.pug
@@ -15,6 +15,7 @@ include ./checkbox-expandle/checkbox-expandle
 include ./option/option
 include ./checkbox_rich/checkbox_rich
 include ./bullet-list/bullet-list
+include ./feedback/feedback
 
 
 block body
@@ -27,7 +28,7 @@ block body
     +text-field('text','This is pretty awesome')(class="color-75")
     h3 dropdown
     span DEFAULT
-    +dropdown()
+    +dropdown('','','Сколько Гостей')(class="arrow--down")
     h3 masked text field
     span default
     +text-field('date','')
@@ -40,7 +41,7 @@ block body
     h3 filter date dropdown
     +dropdown()(class=["size-medium",'arrow--down','color-75'])
     h3 subscribe text field
-    +text-field('text','Email')(class=['size-medium','arrow--forward'])
+    +text-field('text','Email')(class=['flex-size-medium','arrow--forward'])
   
   .block1
     h3 checkbox Buttons
@@ -68,7 +69,7 @@ block body
         +button('CLICK ME')(class=['btn--disable', 'btn--border'])
       .buttons-line
         +button('CLICK ME')(class=['btn--enable','btn--simple'])
-        +button('CLICK ME')(class=['btn--disable','btn--simple'])
+        +button('CLICK ME')(class=['btn--sdisable','btn--simple'])
       .buttons-line
         +button('ПЕРЕЙТИ К ОПЛАТЕ')(class=['btn--fill','btn--big'])
     h3 pagination
@@ -76,22 +77,24 @@ block body
       span.pagination--text 1-12 из 100+ вариантов аренды
   
   .block.block-dropdown
-    .size-medium
+    .flex-size-medium
       h3 dropdown
       span default
-    +dropdown()(class="size-medium")
     .size-medium
+      +dropdown('','','2 спальни, 2 кровати')(class=["flex-size-medium",'arrow--down'])
+    .flex-size-medium
       h3 dropdown
       span Expanded
-    +dropdown()(class=["size-medium",'expanded'])
+    .size-medium
+      +dropdown('Сonveniences','','2 спальни, 2 кровати')(class=["size-medium",'expanded','arrow--down'])
         
   .block.block-dropdown
     h3 dropdown
-    +dropdown()
+    +dropdown('People',true,'Сколько гостей')(class="arrow--down")
         
   .block.block-dropdown
     h3 dropdown
-    +dropdown()
+    +dropdown('People',true,'3 гостя')(class="arrow--down")
 
   .block.block-list
     .size-medium
@@ -99,14 +102,15 @@ block body
       +checkbox-expandle('expandable checkbox list',['Завтрак','Письменный стол','Стул для кормления','Кроватка','Телевизор','Шампунь','Телевизор','Шампунь'])
       +option('var(--smile)','Комфорт','Шумопоглощающие стены')
       +option('var(--home)','text')
-  
-  .block.block-list
-    h3 rich Checkbox Buttons
-    +checkbox_rich()
 
-  .block.block-list
-    h3 bulet list
-    +bullet-list()
-
+  .block-list.wrapper
+    .size-medium.wrapper_content
+      h3 rich Checkbox Buttons
+      +checkbox_rich()
+    .size-medium.wrapper_content
+      h3 bulet list
+      +bullet-list()
+    .wrapper_content.flex-grow
+      +feedback('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
 block footer
   script(src='../../Form_Elements.js')
