--- a/src/pug/blocks/__elements/buttons/buttons.scss
+++ b/src/pug/blocks/__elements/buttons/buttons.scss
@@ -35,6 +35,10 @@
 .btn--disable {
     opacity: 0.5;
 }
+.btn--sdisable {
+    opacity: 0.5;
+    color: var(--dark-50)
+}
 .btn--simple {
     width: 60px;
     height: 22px;
