--- a/src/pug/blocks/__elements/dropdown/trash/dropdown.min.scss
+++ b/src/pug/blocks/__elements/dropdown/trash/dropdown.min.scss
@@ -25,13 +25,13 @@
     border-radius: 4px;
     cursor: default;
 
-    .item {
+    .items {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
     }
-    .item__text {
+    .items__text {
       width: 150px;
       color: var(--dark);
       font-family:  var(--montserrat_bold);
@@ -42,9 +42,9 @@
       text-transform: uppercase;
       text-align: left;
     }
-    .item__count {
-      display: inherit;
-      width: 90px;
+    .items__count {
+      // display: inherit;
+      // width: 90px;
     }
     .item__count__mark {
       display: flex;
