--- a/src/pug/blocks/__elements/general.scss
+++ b/src/pug/blocks/__elements/general.scss
@@ -22,6 +22,7 @@ input {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z' fill='rgba(31, 32, 65, 0.5)'/%3E%3Cpath fill='none' d='M0 0h24v24H0V0z'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: right center;
+    right: 2px;
 }
 .arrow--forward:after {
     content: '';
@@ -40,4 +41,17 @@ input {
     background-image: url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 12 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.40625 7.42187L1.74709e-06 6.01562L6 0.0156231L12 6.01562L10.5938 7.42187L6 2.82812L1.40625 7.42187Z' fill='%231F2041' fill-opacity='0.5'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
     background-position: right center;
+    right: 0;
+    left: 0;
 }
+.size-medium {
+    width: 266px;
+}
+.flex-size-medium {
+    flex-basis: 266px;
+    display: inherit;
+    justify-content: space-between
+}
+@function rem($pixels) {
+    @return $pixels / 14 * 1rem;
+  }
